# cg2015

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.hpp  compile  display.cpp  display.hpp  grass.cpp  grass.hpp  image.cpp  image.hpp  loader.cpp  loader.hpp  main.cpp  main.hpp  misc.cpp  misc.hpp  nvidia.hpp  object.cpp  object.hpp  rigidbody.cpp  rigidbody.hpp  setup.sh  shaders.cpp  shaders.hpp  skybox.cpp  skybox.hpp  timer.cpp  timer.hpp  types.hpp  world.cpp  world.hpp
objects/: textureVertexShader.glsl
objects/chair/: arm.tga  backboard.tga  chair.mtl
objects/cube/: cube.dds
